first pass at new user cards

--- a/platforms/ios/www/templates/activityFeed.html
+++ b/platforms/ios/www/templates/activityFeed.html
@@ -1,5 +1,5 @@
 <ul id="suggested-follow-section"></ul>
-<div class="card-flow-column" style='overflow: hidden;'>
+<div class="card-flow-column activity-feed" style='overflow: hidden;'>
 
 <% if(Util.isTablet()) { %>
     <div style="width: 360px; float: left; overflow: hidden; margin-left: 15px;">
