--- a/platforms/ios/www/css/base.css
+++ b/platforms/ios/www/css/base.css
@@ -915,7 +915,6 @@ div.left.button.back:active { opacity: 0.5; }
 	overflow: hidden;
     list-style: none;
     margin: 0;
-    padding: 0 10px;
     background: rgb(228, 226, 225);
 }
 #category-container #side-swipe {
@@ -1219,11 +1218,7 @@ input.slider-search-form {
     opacity: 1;
 }
 
-#category-filter-x.filter,
-#category-filter.filter {
-    /*height: 70px;*/
-}
-#activity-filter-x.filter,
+
 #activity-filter.filter {
     border-left: 1px solid rgb(214, 213, 217);
 }
@@ -1233,6 +1228,9 @@ input.slider-search-form {
     right: 107px;
 }
 
+.category-filter .content-scroller {
+    padding: 0 10px;
+}
 #recommended-filter.filter {
     border-left: 1px solid rgb(214, 213, 217);
 }
@@ -2073,6 +2071,9 @@ div.recommendation.list-item.userChoice .title {
     top: 5px;
     right: 7px;
     -webkit-transform: rotate(90deg);
+}
+.activity-feed {
+    margin: 0 10px;
 }
 .feed-item .recommendation-action {
     width: 250px;
@@ -3995,7 +3996,127 @@ h2#see-more-matches {
     margin: 5px 0 10px;
     font-size: 14px;
 }
+
+/*-------------------------------------------------*/
+/* --------------- RECOMMENDED PEOPLE -------------*/
+/*-------------------------------------------------*/
+
+#suggested-follow-section {
+    background-color: white;
+    padding-bottom: 8px;
+    position: relative;
+    width: 2200px;
+}
+#recommended-people-title {
+    border-top: 1px solid rgb(214, 213, 217);
+    background-color: white;
+    padding: 5px 10px;
+    font-weight: 500;
+    font-size: 13px;
+}
+
+#suggested-follow-section li.recommended-person {
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.22);
+    background-color: white;
+    display: inline-block;
+    margin-left: 10px;
+}
+
+.recommended-person .profile-picture {
+    background-size: 100% 100%;
+    height: 200px;
+    width: 200px;
+}
+.recommended-person .percent-in-common {
+    border: 3px solid rgba(111, 111, 111, 0.37);
+    position: absolute;
+    line-height: 50px;
+    font-weight: bold;
+    font-size: 16px;
+    height: 50px;
+    margin: 1px;
+    width: 50px;
+}
+.recommended-info {
+    font-size: 13px;
+    padding: 5px;
+}
+.recommended-info .first-name, 
+.recommended-info .city {
+    width: 110px;
+}
+.recommended-info .first-name {
+    font-weight: bold;
+}
+.recommended-info .city {
+    color: gray;
+}
+.person-info {
+    border-bottom: 1px solid lightgray;
+    padding-bottom: 5px; 
+    position: relative;
+
+}
+.person-info .follow-button {
+    transition: width  500ms cubic-bezier(0.785, 0.135, 0.150, 0.860);
+    border-radius: 2px;
+    position: absolute;
+    line-height: 25px;
+    font-weight: bold;
+    padding: 0 14px;
+    font-size: 12px;
+    height: initial;
+    width: 38px;
+    right: 0;
+    top: 0;
+}
+.person-info .follow-button.following {
+    line-height: 23px;
+    border-width: 1px;
+    width: 56px;
+}
+.incommon-info {
+    overflow: hidden;
+    padding-top: 5px; 
+}
+.incommon-info .poster {
+    background-size: 100% 150%;
+    display: inline-block;
+    border-radius: 3px;
+    margin-right: 5px;
+    height: 35px;
+    float: left;
+    width: 35px;
+}
+.incommon-title, .mutual-interest {
+    font-size: 11px;
+}
+
+.incommon-title {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    font-weight: 500;
+    font-size: 11px;
+    margin: 4px 0;
+    width: 150px;
+}
+.mutual-interest {
+    color: gray;
+}
+
+
+/*-------------------------------------------------*/
+/* ------------- END RECOMMENDED PEOPLE -----------*/
+/*-------------------------------------------------*/
+
+
+
+
+
+
 #profile .circle, 
+.percent-in-common,
 .follow-compatibility,
 .match .match-compatibility,
 .compatibility-inner {
