--- a/platforms/ios/www/templates/recommendedPerson.html
+++ b/platforms/ios/www/templates/recommendedPerson.html
@@ -1,3 +1,22 @@
-<div class="recommended-person">
-	<p class="follow">Follow</p>
-</div>
+<% 
+var profilePicture = "https://graph.facebook.com/"+person.facebookID+"/picture?height=380&width=320";
+
+%>
+
+
+
+	<div class="profile-picture" style="background-image: url(<%= profilePicture %>);">
+		<div class="percent-in-common"><%= person.compatibility %>%</div>
+	</div>
+	<div class="recommended-info">
+		<div class="person-info">
+			<p class="first-name"><%= person.userName.split(' ')[0] %></p>
+			<p class="city"><%= person.city %></p>
+			<span class="follow-button">Follow</span>
+		</div>
+		<div class="incommon-info">
+			<div class="poster" style="background-image: url(<%= Api.appSettings.cdn %><%= person.poster_thumbnail_path.replace('/files', '') %>)"></div>
+			<p class="incommon-title"><%= person.title %></p>
+			<p class="mutual-interest">+<%= person.inCommon %> Mutual Interest</p>
+		</div>
+	</div>
