--- a/platforms/ios/www/templates/rate.html
+++ b/platforms/ios/www/templates/rate.html
@@ -1,8 +1,4 @@
 <div id="home-slider">
-    <div id="home-filters">
-        <div id="category-filter"><span>Explore</span></div>
-        <div id="activity-filter">Feed</div>
-    </div>
     <div id="category-container">
         <div>
             <div id="content-container">
@@ -10,7 +6,11 @@
             </div>
         </div>
     </div>
-
+    <div id="home-filters">
+        <div id="category-filter"></div>
+        <div id="activity-filter"></div>
+        <img src="images/discovery/fabButton.png">
+    </div>
 </div>
 <%= APP.load("fabricMenu") %>
 
