--- a/platforms/ios/www/css/base.css
+++ b/platforms/ios/www/css/base.css
@@ -135,6 +135,7 @@ header {
 #wrapper.welcome #chat-menu { display: none; }
 #wrapper.rate header { border-bottom: 0; }
 header nav {
+    background: -webkit-linear-gradient(#922624, #C0322F);
 	position: relative;
 	text-align: center;
     height: 50px;
@@ -145,7 +146,7 @@ header nav {
 header nav h1, #available-services h1 {
     margin: 0;
     padding: 0;
-    color: #C0322F;
+    color: white;
     font-size: 22px;
     line-height: 50px;
     max-width:70%;
@@ -159,22 +160,22 @@ header nav h1, #available-services h1 {
 }
 #coach-section h1, 
 #dashboard header nav h1 {
-    background: white;
-    color:#4A4A4A;
-    font-weight: normal;
-    font-family: Knockout;
-    font-size: 28px;
+    background: -webkit-linear-gradient(#C0322F,#a72c29);
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.41);
     text-transform: uppercase;
-    width: 90px;
-    text-align: left;
-    margin: 7px auto 0;
+    font-family: Knockout;
     padding: 0 5px 0 12px;
-    padding-top: 3px;
     display: inline-block;
-    line-height: 32px;
-    border: 1px solid lightgray;
+    font-weight: normal;
+    margin: 7px auto 0;
     border-radius: 3px;
     position: relative;
+    line-height: 32px;
+    padding-top: 3px;
+    text-align: left;
+    font-size: 28px;
+    color: white;
+    width: 90px;
 }
 
 header nav h1 {
@@ -195,6 +196,8 @@ header nav h1 {
 #dashboard header nav h1.notify,
 .list header nav h1.notify {
     height: 45px !important;
+    box-shadow: none;
+    background: none;
 }
 
 /* Fabric Navigation */
@@ -320,6 +323,9 @@ header nav #tap-menu {
     background-size: 25px 16px;
     background-position: 10px 16px;
 }
+header nav #chat-menu {
+    top: 4px;
+}
 header nav #share-icon,
 header nav #chat-menu {
     right: 0;
@@ -330,7 +336,7 @@ header nav #chat-menu {
 header nav #shopping-cart,
 header nav #notifications-menu {
     right: 35px;
-    background-image: url(../images/discovery/bell.png);
+    background-image: url(../images/discovery/notifications.png);
     background-size: 23px 23px;
     background-position: 7px 15px;
 }
@@ -1180,38 +1186,36 @@ input.slider-search-form {
 #side-swipe .footer span:nth-child(2) { margin-left: 10px; height: 20px; }*/
 #side-swipe #total { margin: 0; }
 #home-filters {
+    background-color: #C0322F;
     position: relative;
-    width: 320px;
-    height: 40px;
-    margin: 0;
-    border-bottom: 1px solid rgb(214, 213, 217);
+    float: right;
+    width: 100%;
 }
-#slide-filters {
-    position: absolute;
-    right: 0;
-    left: 0;
-    top: -70px;
-    height: 40px;
-    transition: top 300ms ease-in-out;
+
+
+#home-filters div#activity-filter {
+    background-image: url(../images/discovery/friends.png);
+    background-position-x: 55%;
+    background-size: 30px;
+}
+#category-filter {
+    background-image: url(../images/discovery/explore.png);
+
 }
 #coach-section div,
 #home-filters div {
-    text-transform: uppercase;
-    background-color: white;
-    text-align: center;
-    line-height: 40px;
-    font-size: 13px;
-    color: #C0322F;
-    height: 40px;
-    width: 106px;
+    background-position: 43% center;
+    background-repeat: no-repeat;
+    background-size: 40px;
+    height: 57px;
     float: left;
+    width: 50%;
 }
-
-#coach-section div,
-#slide-filters div.filter, 
-#home-filters div.filter {
-    background-color: #C0322F;
-    color: white;
+#home-filters img {
+    position: absolute;
+    margin: 3px 0;
+    height: 90%;
+    right: 42%;
 }
 
 #category-filter.filter .cat-sub-filter{
@@ -1220,13 +1224,9 @@ input.slider-search-form {
 
 
 #activity-filter.filter {
-    border-left: 1px solid rgb(214, 213, 217);
+
 }
 
-#activity-filter {
-    border-left: 1px solid rgb(214, 213, 217);
-    right: 107px;
-}
 
 .category-filter .content-scroller {
     padding: 0 10px;
@@ -4002,6 +4002,8 @@ h2#see-more-matches {
 /*-------------------------------------------------*/
 
 #suggested-follow-section {
+    transition-timing-function: cubic-bezier(0.1, 0.57, 0.1, 1);
+    transition-delay: 0;
     background-color: white;
     padding-bottom: 8px;
     position: relative;
@@ -5284,37 +5286,56 @@ button#done {
     height: 100%;
     z-index: 4000;
 }
-#status-drop p, #menu-drop p {
+#search-wrapper {
+    overflow: hidden;
+    height: 564px;
+}
+#search-results {
+    padding: 10px;
+}
+#search-results p,
+#status-drop p, 
+#menu-drop p {
     margin: 10px 0;
 }
-#status-drop .result, #menu-drop .result {
+#search-results .result,
+#status-drop .result, 
+#menu-drop .result {
     overflow: hidden;
     border-bottom: 1px solid #999;
     height: 60px;
 }
-#status-drop .result .poster, #menu-drop .result .poster {
+#search-results .result .poster,
+#status-drop .result .poster,
+#menu-drop .result .poster {
     float: left;
     width: 40px;
     height: 60px;
-    background-size: 40px 60px;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
     background-color: #EBEBEB;
     background-image: url(../images/discovery/no_poster.jpg);
 }
-#status-drop .result .info, #menu-drop .result .info {
+#search-results .result .info,
+#status-drop .result .info, 
+#menu-drop .result .info {
     margin: 0;
     float: left;
     width:260px;
     text-align:left;
 }
 #menu-drop .result .info { width: 185px; }
-#status-drop .result h1, #menu-drop .result h1 {
+#search-results .result h1,
+#status-drop .result h1,
+#menu-drop .result h1 {
     color: black;
     padding-left: 5px;
     font-family: Helvetica, Ariel;
     line-height: 15px;
 }
-#status-drop .result h2, #menu-drop .result h2 {
+#search-results .result h2,
+#status-drop .result h2, 
+#menu-drop .result h2 {
     color: #666;
     text-align: left;
     padding-left: 5px;
@@ -5451,6 +5472,15 @@ button#done {
 
     top: 15px;
     right: 25px;
+}
+#status-update-search {
+    background-color: lightgray;
+    padding: 5px;
+}
+#status-update-input {
+    font-size: 17px;
+    width: 348px;
+    border: none;
 }
 #video-player:-webkit-full-screen {
     width: 100%;
