--- a/platforms/ios/www/css/base.css
+++ b/platforms/ios/www/css/base.css
@@ -2853,6 +2853,9 @@ div.right.button, div.left.button {
     display: inline-block;
     vertical-align: top;
 }
+.context-info .i {
+    
+}
 .context-info .bold {
     color: black;
 }
@@ -4030,7 +4033,7 @@ h2#see-more-matches {
     width: 200px;
 }
 .recommended-person .percent-in-common {
-    border: 3px solid rgba(111, 111, 111, 0.37);
+    border: 3px solid whitesmoke;
     position: absolute;
     line-height: 50px;
     font-weight: bold;
