--- a/platforms/ios/www/templates/homeHeader.html
+++ b/platforms/ios/www/templates/homeHeader.html
@@ -15,7 +15,7 @@
         <%= title %>
         <span id="current-icon" class="<%= label %>"></span>
     </h1>
-    <img id="tap-menu" src=<%= User.avatar.src %> />
+    <img id="tap-menu" src=<%= User.createUserAvatar() %> />
 
     <% if(editButton) { %>
         <span id="header-edit-button">Edit</span>
