--- a/platforms/ios/www/templates/statusUpdateMovie.html
+++ b/platforms/ios/www/templates/statusUpdateMovie.html
@@ -5,7 +5,8 @@
     <div id="status-poster" class="poster"<% if(movie.posterPath) { %> style="background-image: url(<%= Api.appSettings.cdn %><%= movie.posterPath.replace('/files', '') %>)"<% } %>></div>
     <!--<p>Going to check out <span class="bold"><%= movie.title %></span></p>-->
     <div class="text-box">
-        <textarea rows="5" cols="20">Write a comment about <%= movie.title %></textarea>
+    	<% console.log(movie.title); %>
+        <textarea rows="5" cols="20" placeholder="Write something about <%= movie.title %>"></textarea>
     </div>
 </div>
 <div class="share-icons">
