--- a/platforms/ios/www/templates/discussion.html
+++ b/platforms/ios/www/templates/discussion.html
@@ -56,7 +56,7 @@ var watchStatus = typeof feedType !== 'undefined' && feedType === 'watchstatus' 
 </div>
 <div id="message-textarea">
     <form class="message-form" name="message-form" action="javascript:void(0);">
-        <input id="message" type="text" name="message" value="" />
-        <input id="submit" type="submit" value="post" />
+        <input id="message" type="text" name="message" value="" placeholder="Write a comment" />
+        <input id="submit" type="submit" value="Post" />
     </form>
 </div>
