--- a/platforms/ios/www/css/main-4.7-inch.css
+++ b/platforms/ios/www/css/main-4.7-inch.css
@@ -571,6 +571,10 @@ div#search-for-friends { background-size: 24px; }
     font-size: 18px; 
     width: 220px; 
 }
+#messages-slider {
+    overflow: hidden;
+    height: 556px;
+}
 .suggested-message {
     line-height: 19px;
 }
